assets/style.css
body {
  max-width: 650px;
  margin: 40px auto;
  padding: 10px 10px 40px 10px;
  font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  color: #444;
  background-color: #EEEEEE;
}

.top-bar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #EEEEEE;
  padding: 10px 40px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 1000;
  border-bottom: 1px solid #ddd;
}

h1,h2,h3 {
  line-height: 1.2;
}

nav {
  text-align: center;
}

img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  height: auto;
}

a {
  color: blue;
}

a:visited {
  color: purple;
}

nav a {
  text-decoration: none;
  color: #333;
  padding: 0 10px;
}

nav a:visited {
  color: #333
}

.stuff-right {
  display: flex;
  gap: 20px;
}

.stuff-right a {
  text-decoration: none;
  color: #444;
}
.stuff-left {
  display: flex;
  gap: 20px;
}

.stuff-left a {
  text-decoration: none;
  color: #444;
}

